--- a/assets/scss/play.scss
+++ b/assets/scss/play.scss
@@ -51,4 +51,18 @@
       background-color: rgb(119, 196, 240);
     }
   }
+
+  .el-dialog {
+    .el-dialog__body {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+
+      .el-title {
+        margin-bottom: 10%;
+        text-align: center;
+      }
+    }
+  }
 }
